--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>
               Découvrez des restaurants d'exception sélectionnés par nos soins
             </p>
-            <button>Explorer nos restaurants</button>
+            <button class="button">Explorer nos restaurants</button>
           </div>
         </div>
         <section class="stepHolder">
