--- a/pages/menu_3.html
+++ b/pages/menu_3.html
@@ -25,15 +25,15 @@
   <body>
     <header>
       <a href="../index.html"> <i class="fa-solid fa-arrow-left fa-xl"></i></a>
-      <img src="../assets/images/ohmyfood@2x.svg" alt="" />
+      <img src="../assets/images/ohmyfood@2x.svg" alt="OhMyFood" />
     </header>
     <main>
       <div class="banner">
-        <img src="../assets/images/img1.jpg" alt="" />
+        <img src="../assets/images/img3.jpg" alt="A la française" />
       </div>
       <div class="content">
         <div class="head">
-          <h1>La palette du goût</h1>
+          <h1>A la française</h1>
           <i class="far fa-heart"></i>
         </div>
         <section>
@@ -41,8 +41,8 @@
           <div class="cardHolder">
             <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Fricassée d'escargot</h3>
-                <p>Au piment d'Espelette</p>
+                <h3 class="title">Tartare de poulpe acidulé</h3>
+                <p>Aux zestes d'orange</p>
                 <p class="price">25€</p>
               </div>
               <div class="selected">
@@ -51,8 +51,8 @@
             </a>
             <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Foie gras de canard mi-cuit</h3>
-                <p>Et ses copeaux de truffe noire</p>
+                <h3 class="title">Velouté de légumes d'antan</h3>
+                <p>Carotte, panais, topinambour</p>
                 <p class="price">35€</p>
               </div>
               <div class="selected">
@@ -61,8 +61,8 @@
             </a>
             <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Oeuf au plat</h3>
-                <p>Assaisonné à la truffe sur lit de caviar</p>
+                <h3 class="title">Soupe à l'oignon</h3>
+                <p>Revisitée</p>
                 <p class="price">20€</p>
               </div>
               <div class="selected">
@@ -76,8 +76,8 @@
           <div class="cardHolder">
             <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Filet de boeuf aux herbes</h3>
-                <p>Accompagné de sa ribambelle de légumes</p>
+                <h3 class="title">Coquilles Saint-Jacques</h3>
+                <p>Accompagnées d'une purée de panais</p>
                 <p class="price">40€</p>
               </div>
               <div class="selected">
@@ -86,8 +86,8 @@
             </a>
             <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Parmentier de queue de boeuf</h3>
-                <p>À la truffe noire sur sa purée de panais</p>
+                <h3 class="title">Magret de canard</h3>
+                <p>Et parmentier de pommes de terre</p>
                 <p class="price">35€</p>
               </div>
               <div class="selected">
@@ -96,8 +96,8 @@
             </a>
             <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Filet de turbot</h3>
-                <p>Aux agrumes</p>
+                <h3 class="title">Pigeonneau d’Ille-et-Vilaine</h3>
+                <p>Sur son lit de gnocchis aux légumes</p>
                 <p class="price">44€</p>
               </div>
               <div class="selected">
@@ -111,8 +111,8 @@
           <div class="cardHolder">
             <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Paris-Brest</h3>
-                <p>Revisité</p>
+                <h3 class="title">Pétales de violettes glacés</h3>
+                <p>Et purée de noisettes</p>
                 <p class="price">18€</p>
               </div>
               <div class="selected">
@@ -121,8 +121,8 @@
             </a>
             <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Macaron au chocolat d'exception</h3>
-                <p>Et glace à la vanille de Madagascar</p>
+                <h3 class="title">Fondant au chocolat</h3>
+                <p>Revisité</p>
                 <p class="price">22€</p>
               </div>
               <div class="selected">
@@ -131,8 +131,8 @@
             </a>
             <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Mousse au chocolat</h3>
-                <p>Au piment d'Espelette et à la truffe noire</p>
+                <h3 class="title">Millefeuille croustillant</h3>
+                <p>Myrtilles et pâte d’amande</p>
                 <p class="price">23€</p>
               </div>
               <div class="selected">
