--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     <main>
       <div class="content">
         <div class="banner">
-          <div class="position"><i class="fa-solid fa-location-dot"></i><input type="text" placeholder="Paris, Belleville"></div>
+          <div class="position">
+            <i class="fa-solid fa-location-dot"></i
+            ><input type="text" placeholder="Paris, Belleville" />
+          </div>
           <div>
             <h1>Réservez le menu qui vous convient</h1>
             <p>
@@ -38,24 +41,24 @@
           </div>
         </div>
         <section class="stepHolder">
-          <h1>Fonctionnement</h1>
+          <h2>Fonctionnement</h2>
           <div class="stepContainer">
             <div class="step">
-              <span><p>1</p></span>
+              <span>1</span>
               <div class="stepContent">
                 <i class="fa-solid fa-mobile-screen-button fa-lg"></i>
                 <p>Choisissez un restaurant</p>
               </div>
             </div>
             <div class="step">
-              <span><p>2</p></span>
+              <span>2</span>
               <div class="stepContent">
                 <i class="fa-solid fa-list-ul"></i>
                 <p>Composez voter menu</p>
               </div>
             </div>
             <div class="step">
-              <span><p>3</p></span>
+              <span>3</span>
               <div class="stepContent">
                 <i class="fa-sharp fa-solid fa-store"></i>
                 <p>Dégustez au restaurant</p>
@@ -64,10 +67,10 @@
           </div>
         </section>
         <section class="cardHolder">
-          <h1>Restaurants</h1>
+          <h2>Restaurants</h2>
           <div class="container">
             <a href="./pages/menu_1.html">
-              <span><p>NOUVEAU</p></span>
+              <span>NOUVEAU</span>
               <div class="card">
                 <img src="./assets/images/img1.jpg" alt="" />
                 <div class="cardContent">
@@ -80,7 +83,7 @@
               </div>
             </a>
             <a href="./pages/menu_2.html">
-              <span><p>NOUVEAU</p></span>
+              <span>NOUVEAU</span>
               <div class="card">
                 <img src="./assets/images/img2.jpg" alt="" />
                 <div class="cardContent">
@@ -93,7 +96,7 @@
               </div>
             </a>
             <a href="./pages/menu_3.html">
-              <span><p>NOUVEAU</p></span>
+              <span>NOUVEAU</span>
               <div class="card">
                 <img src="./assets/images/img3.jpg" alt="A la française" />
                 <div class="cardContent">
@@ -106,7 +109,7 @@
               </div>
             </a>
             <a href="./pages/menu_4.html">
-              <span><p>NOUVEAU</p></span>
+              <span>NOUVEAU</span>
               <div class="card">
                 <img src="./assets/images/img4.jpg" alt="Le délice des sens" />
                 <div class="cardContent">
@@ -125,22 +128,21 @@
           <ul>
             <li><p>ohmyfood</p></li>
             <li>
-              <a href="#"><i class="fa-solid fa-utensils"></i>
-              Proposer un restaurant</a>
+              <a href="#"
+                ><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a
+              >
             </li>
             <li>
-              <a href="#"><i class="fa-solid fa-handshake-angle"></i></i>
-              Devenir partenaire
-            </li></a>
-            <li>
-              <a href="#">
-              Mention légales
-            </a>
+              <a href="#"
+                ><i class="fa-solid fa-handshake-angle"></i> Devenir
+                partenaire</a
+              >
             </li>
             <li>
-              <a href="#">
-              Contact
-            </a>
+              <a href="#"> Mention légales </a>
+            </li>
+            <li>
+              <a href="#"> Contact </a>
             </li>
           </ul>
         </footer>
