--- a/pages/menu_4.html
+++ b/pages/menu_4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/pageStyle.css" />
+    <link rel="stylesheet" href="../css/page.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
@@ -25,11 +25,11 @@
   <body>
     <header>
       <a href="../index.html"> <i class="fa-solid fa-arrow-left fa-xl"></i></a>
-      <img src="../assets/images/ohmyfood@2x.svg" alt="" />
+      <img src="../assets/images/ohmyfood@2x.svg" alt="OhMyFood" />
     </header>
     <main>
       <div class="banner">
-        <img src="../assets/images/img4.jpg" alt="" />
+        <img src="../assets/images/img4.jpg" alt="Le délice des sens" />
       </div>
       <div class="content">
         <div class="head">
@@ -37,9 +37,9 @@
           <i class="far fa-heart"></i>
         </div>
         <section>
-          <span><h2>ENTREES</h2></span>
+          <span>ENTREES</span>
           <div class="cardHolder">
-            <button class="card">
+            <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Tartare de thon</h3>
                 <p>Assaisonné au yuzu</p>
@@ -48,18 +48,18 @@
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
-            </button>
-            <button class="card">
+            </a>
+            <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Bouchée de homard croustillant </h3>
+                <h3 class="title">Bouchée de homard croustillant</h3>
                 <p>Et sa farandole de petits légumes</p>
                 <p class="price">35€</p>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
-            </button>
-            <button class="card">
+            </a>
+            <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Velouté de cèpes</h3>
                 <p>Aux truffes</p>
@@ -68,48 +68,48 @@
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
-            </button>
+            </a>
           </div>
         </section>
         <section>
-          <span><h2>PLATS</h2></span>
+          <span>PLATS</span>
           <div class="cardHolder">
-            <button class="card" type="">
+            <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Poulet rôti aux herbes de Provence </h3>
+                <h3 class="title">Poulet rôti aux herbes de Provence</h3>
                 <p>Et sa crème de truffe</p>
                 <p class="price">40€</p>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
-            </button>
-            <button class="card">
+            </a>
+            <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Langouste rôtie </h3>
+                <h3 class="title">Langouste rôtie</h3>
                 <p>Et ses légumes de saison</p>
                 <p class="price">35€</p>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
-            </button>
-            <button class="card">
+            </a>
+            <a href="#" class="card">
               <div class="cardContent">
-                <h3 class="title">Côte de boeuf Angus </h3>
+                <h3 class="title">Côte de boeuf Angus</h3>
                 <p>Et sa purée de panais</p>
                 <p class="price">44€</p>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
-            </button>
+            </a>
           </div>
         </section>
         <section>
-          <span><h2>DESSERTS</h2></span>
+          <span>DESSERTS</span>
           <div class="cardHolder">
-            <button class="card">
+            <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Farandole de desserts</h3>
                 <p>Du chef</p>
@@ -118,8 +118,8 @@
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
-            </button>
-            <button class="card">
+            </a>
+            <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Crème brulée</h3>
                 <p>Revisitée</p>
@@ -128,8 +128,8 @@
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
-            </button>
-            <button class="card">
+            </a>
+            <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Tiramisu</h3>
                 <p>À la noisette</p>
@@ -138,35 +138,32 @@
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
-            </button>
+            </a>
           </div>
         </section>
-        <div class="commander"><button>Commander</button></div>
+        <div class="commander"><button class="button">Commander</button></div>
       </div>
-      
     </main>
     <footer>
-          <ul>
-            <li><p>ohmyfood</p></li>
-            <li>
-              <a href="#"><i class="fa-solid fa-utensils"></i>
-              Proposer un restaurant</a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-solid fa-handshake-angle"></i></i>
-              Devenir partenaire
-            </li></a>
-            <li>
-              <a href="#">
-              Mention légales
-            </a>
-            </li>
-            <li>
-              <a href="#">
-              Contact
-            </a>
-            </li>
-          </ul>
-      </footer>
+      <ul>
+        <li><p>ohmyfood</p></li>
+        <li>
+          <a href="#"
+            ><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            ><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a
+          >
+        </li>
+        <li>
+          <a href="#"> Mention légales </a>
+        </li>
+        <li>
+          <a href="#"> Contact </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
