--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Document</title>
+    <title>OhMyFood</title>
   </head>
   <body>
     <div class="wrapper">
@@ -70,7 +70,7 @@
           <h2>Restaurants</h2>
           <div class="container">
             <a href="./pages/menu_1.html">
-              <span>NOUVEAU</span>
+              <span>Nouveau</span>
               <div class="card">
                 <img src="./assets/images/img1.jpg" alt="" />
                 <div class="cardContent">
@@ -83,7 +83,7 @@
               </div>
             </a>
             <a href="./pages/menu_2.html">
-              <span>NOUVEAU</span>
+              <span>Nouveau</span>
               <div class="card">
                 <img src="./assets/images/img2.jpg" alt="" />
                 <div class="cardContent">
@@ -96,7 +96,7 @@
               </div>
             </a>
             <a href="./pages/menu_3.html">
-              <span>NOUVEAU</span>
+              <span>Nouveau</span>
               <div class="card">
                 <img src="./assets/images/img3.jpg" alt="A la française" />
                 <div class="cardContent">
@@ -109,7 +109,7 @@
               </div>
             </a>
             <a href="./pages/menu_4.html">
-              <span>NOUVEAU</span>
+              <span>Nouveau</span>
               <div class="card">
                 <img src="./assets/images/img4.jpg" alt="Le délice des sens" />
                 <div class="cardContent">
@@ -142,7 +142,7 @@
               <a href="#"> Mention légales </a>
             </li>
             <li>
-              <a href="#"> Contact </a>
+              <a href="mailto:ohmyfood@gmail.com"> Contact </a>
             </li>
           </ul>
         </footer>
