--- a/pages/menu_1.html
+++ b/pages/menu_1.html
@@ -42,8 +42,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Fricassée d'escargot</h3>
-                <p>Au piment d'Espelette</p>
-                <p class="price">25€</p>
+                <div class="subContent">
+                  <p class="desc">Au piment d'Espelette</p>
+                  <p class="price">25€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -52,8 +54,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Foie gras de canard mi-cuit</h3>
-                <p>Et ses copeaux de truffe noire</p>
-                <p class="price">35€</p>
+                <div class="subContent">
+                  <p class="desc">Et ses copeaux de truffe noire</p>
+                  <p class="price">35€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -62,8 +66,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Oeuf au plat</h3>
-                <p>Assaisonné à la truffe sur lit de caviar</p>
-                <p class="price">20€</p>
+                <div class="subContent">
+                  <p class="desc">Assaisonné à la truffe sur lit de caviar</p>
+                  <p class="price">20€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -77,8 +83,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Filet de boeuf aux herbes</h3>
-                <p>Accompagné de sa ribambelle de légumes</p>
-                <p class="price">40€</p>
+                <div class="subContent">
+                  <p class="desc">Accompagné de sa ribambelle de légumes</p>
+                  <p class="price">40€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -87,8 +95,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Parmentier de queue de boeuf</h3>
-                <p>À la truffe noire sur sa purée de panais</p>
-                <p class="price">35€</p>
+                <div class="subContent">
+                  <p class="desc">À la truffe noire sur sa purée de panais</p>
+                  <p class="price">35€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -97,8 +107,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Filet de turbot</h3>
-                <p>Aux agrumes</p>
-                <p class="price">44€</p>
+                <div class="subContent">
+                  <p class="desc">Aux agrumes</p>
+                  <p class="price">44€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -112,8 +124,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Paris-Brest</h3>
-                <p>Revisité</p>
-                <p class="price">18€</p>
+                <div class="subContent">
+                  <p class="desc">Revisité</p>
+                  <p class="price">18€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -122,8 +136,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Macaron au chocolat d'exception</h3>
-                <p>Et glace à la vanille de Madagascar</p>
-                <p class="price">22€</p>
+                <div class="subContent">
+                  <p class="desc">Et glace à la vanille de Madagascar</p>
+                  <p class="price">22€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -132,8 +148,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Mousse au chocolat</h3>
-                <p>Au piment d'Espelette et à la truffe noire</p>
-                <p class="price">23€</p>
+                <div class="subContent">
+                  <p class="desc">Au piment d'Espelette et à la truffe noire</p>
+                  <p class="price">23€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -161,7 +179,7 @@
           <a href="#"> Mention légales </a>
         </li>
         <li>
-          <a href="#"> Contact </a>
+          <a href="mailto:ohmyfood@gmail.com"> Contact </a>
         </li>
       </ul>
     </footer>
