--- a/pages/menu_2.html
+++ b/pages/menu_2.html
@@ -171,7 +171,7 @@
           <a href="#"> Mention légales </a>
         </li>
         <li>
-          <a href="#"> Contact </a>
+          <a href="mailto:ohmyfood@gmail.com"> Contact </a>
         </li>
       </ul>
     </footer>
