--- a/pages/menu_3.html
+++ b/pages/menu_3.html
@@ -161,7 +161,7 @@
           <a href="#"> Mention légales </a>
         </li>
         <li>
-          <a href="#"> Contact </a>
+          <a href="mailto:ohmyfood@gmail.com"> Contact </a>
         </li>
       </ul>
     </footer>
