--- a/pages/menu_3.html
+++ b/pages/menu_3.html
@@ -42,8 +42,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Tartare de poulpe acidulé</h3>
-                <p>Aux zestes d'orange</p>
-                <p class="price">25€</p>
+                <div class="subContent">
+                  <p class="desc">Aux zestes d'orange</p>
+                  <p class="price">25€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -52,8 +54,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Velouté de légumes d'antan</h3>
-                <p>Carotte, panais, topinambour</p>
-                <p class="price">35€</p>
+                <div class="subContent">
+                  <p class="desc">Carotte, panais, topinambour</p>
+                  <p class="price">35€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -62,8 +66,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Soupe à l'oignon</h3>
-                <p>Revisitée</p>
-                <p class="price">20€</p>
+                <div class="subContent">
+                  <p class="desc">Revisitée</p>
+                  <p class="price">20€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -77,8 +83,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Coquilles Saint-Jacques</h3>
-                <p>Accompagnées d'une purée de panais</p>
-                <p class="price">40€</p>
+                <div class="subContent">
+                  <p desc>Accompagnées d'une purée de panais</p>
+                  <p class="price">40€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -87,8 +95,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Magret de canard</h3>
-                <p>Et parmentier de pommes de terre</p>
-                <p class="price">35€</p>
+                <div class="subContent">
+                  <p class="desc">Et parmentier de pommes de terre</p>
+                  <p class="price">35€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -97,8 +107,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Pigeonneau d’Ille-et-Vilaine</h3>
-                <p>Sur son lit de gnocchis aux légumes</p>
-                <p class="price">44€</p>
+                <div class="subContent">
+                  <p class="desc">Sur son lit de gnocchis aux légumes</p>
+                  <p class="price">44€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -112,8 +124,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Pétales de violettes glacés</h3>
-                <p>Et purée de noisettes</p>
-                <p class="price">18€</p>
+                <div class="subContent">
+                  <p>Et purée de noisettes</p>
+                  <p class="price">18€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -122,8 +136,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Fondant au chocolat</h3>
-                <p>Revisité</p>
-                <p class="price">22€</p>
+                <div class="subContent">
+                  <p>Revisité</p>
+                  <p class="price">22€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -132,8 +148,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Millefeuille croustillant</h3>
-                <p>Myrtilles et pâte d’amande</p>
-                <p class="price">23€</p>
+                <div class="subContent">
+                  <p class="desc">Myrtilles et pâte d’amande</p>
+                  <p class="price">23€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
