--- a/pages/menu_4.html
+++ b/pages/menu_4.html
@@ -42,8 +42,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Tartare de thon</h3>
-                <p>Assaisonné au yuzu</p>
-                <p class="price">25€</p>
+                <div class="subContent">
+                  <p class="desc">Assaisonné au yuzu</p>
+                  <p class="price">25€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -52,8 +54,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Bouchée de homard croustillant</h3>
-                <p>Et sa farandole de petits légumes</p>
-                <p class="price">35€</p>
+                <div class="subContent">
+                  <p class="desc">Et sa farandole de petits légumes</p>
+                  <p class="price">35€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -62,8 +66,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Velouté de cèpes</h3>
-                <p>Aux truffes</p>
-                <p class="price">20€</p>
+                <div class="subContent">
+                  <p class="desc">Aux truffes</p>
+                  <p class="price">20€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -77,8 +83,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Poulet rôti aux herbes de Provence</h3>
-                <p>Et sa crème de truffe</p>
-                <p class="price">40€</p>
+                <div class="subContent">
+                  <p class="desc">Et sa crème de truffe</p>
+                  <p class="price">40€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -87,8 +95,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Langouste rôtie</h3>
-                <p>Et ses légumes de saison</p>
-                <p class="price">35€</p>
+                <div class="subContent">
+                  <p class="desc">Et ses légumes de saison</p>
+                  <p class="price">35€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -97,8 +107,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Côte de boeuf Angus</h3>
-                <p>Et sa purée de panais</p>
-                <p class="price">44€</p>
+                <div class="subContent">
+                  <p class="desc">Et sa purée de panais</p>
+                  <p class="price">44€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -112,8 +124,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Farandole de desserts</h3>
-                <p>Du chef</p>
-                <p class="price">18€</p>
+                <div class="subContent">
+                  <p class="desc">Du chef</p>
+                  <p class="price">18€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -122,8 +136,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Crème brulée</h3>
-                <p>Revisitée</p>
-                <p class="price">22€</p>
+                <div class="subContent">
+                  <p class="desc">Revisitée</p>
+                  <p class="price">22€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -132,8 +148,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Tiramisu</h3>
-                <p>À la noisette</p>
-                <p class="price">23€</p>
+                <div class="subContent">
+                  <p class="desc">À la noisette</p>
+                  <p class="price">23€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
