--- a/pages/menu_2.html
+++ b/pages/menu_2.html
@@ -42,8 +42,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Ravioles de foie gras</h3>
-                <p>Accompagnés de leur crème à la truffe</p>
-                <p class="price">25€</p>
+                <div class="subContent">
+                  <p class="desc">Accompagnés de leur crème à la truffe</p>
+                  <p class="price">25€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -52,8 +54,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Caviar osciètre</h3>
-                <p>Sur blini à la farine de blé noir</p>
-                <p class="price">35€</p>
+                <div class="subContent">
+                  <p class="desc">Sur blini à la farine de blé noir</p>
+                  <p class="price">35€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -62,8 +66,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Homard et espuma de potiron</h3>
-                <p>Mariné aux zestes d'orange</p>
-                <p class="price">20€</p>
+                <div class="subContent">
+                  <p class="desc">Mariné aux zestes d'orange</p>
+                  <p class="price">20€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -72,8 +78,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Foie gras de canard cuit entier</h3>
-                <p>Confiture de figue et pain toasté</p>
-                <p class="price">35€</p>
+                <div class="subContent">
+                  <p class="desc">Confiture de figue et pain toasté</p>
+                  <p class="price">35€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -87,8 +95,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Noix de coquilles Saint-Jacques</h3>
-                <p>Sur lit de purée de céleri-rave</p>
-                <p class="price">40€</p>
+                <div class="subContent">
+                  <p class="desc">Sur lit de purée de céleri-rave</p>
+                  <p class="price">40€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -97,8 +107,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Langoustine poêlée</h3>
-                <p>Purée de patate douce</p>
-                <p class="price">35€</p>
+                <div class="subContent">
+                  <p class="desc">Purée de patate douce</p>
+                  <p class="price">35€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -107,8 +119,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Mijoté de queue de boeuf</h3>
-                <p>Et riz sauvage aux zestes de citron</p>
-                <p class="price">44€</p>
+                <div class="subContent">
+                  <p class="desc">Et riz sauvage aux zestes de citron</p>
+                  <p class="price">44€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -122,8 +136,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Macaron noisette et chocolat</h3>
-                <p>Glace au caramel brun et sel de Guérande</p>
-                <p class="price">18€</p>
+                <div class="subContent">
+                  <p class="desc">Glace au caramel brun et sel de Guérande</p>
+                  <p class="price">18€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -132,8 +148,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Baba au rhum revisité</h3>
-                <p>Avec son coulis de citron</p>
-                <p class="price">22€</p>
+                <div class="subContent">
+                  <p class="desc">Avec son coulis de citron</p>
+                  <p class="price">22€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
@@ -142,8 +160,10 @@
             <a href="#" class="card">
               <div class="cardContent">
                 <h3 class="title">Tarte au citron meringuée</h3>
-                <p>Déstructurée</p>
-                <p class="price">23€</p>
+                <div class="subContent">
+                  <p class="desc">Déstructurée</p>
+                  <p class="price">23€</p>
+                </div>
               </div>
               <div class="selected">
                 <i class="fa-solid fa-circle-check"></i>
