--- a/pages/menu_1.html
+++ b/pages/menu_1.html
@@ -48,7 +48,7 @@
                 </div>
               </div>
               <div class="selected">
-                <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check fa-xl"></i>
               </div>
             </a>
             <a href="#" class="card">
@@ -60,7 +60,7 @@
                 </div>
               </div>
               <div class="selected">
-                <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check fa-xl"></i>
               </div>
             </a>
             <a href="#" class="card">
@@ -72,7 +72,7 @@
                 </div>
               </div>
               <div class="selected">
-                <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check fa-xl"></i>
               </div>
             </a>
           </div>
@@ -89,7 +89,7 @@
                 </div>
               </div>
               <div class="selected">
-                <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check fa-xl"></i>
               </div>
             </a>
             <a href="#" class="card">
@@ -101,7 +101,7 @@
                 </div>
               </div>
               <div class="selected">
-                <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check fa-xl"></i>
               </div>
             </a>
             <a href="#" class="card">
@@ -113,7 +113,7 @@
                 </div>
               </div>
               <div class="selected">
-                <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check fa-xl"></i>
               </div>
             </a>
           </div>
@@ -130,7 +130,7 @@
                 </div>
               </div>
               <div class="selected">
-                <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check fa-xl"></i>
               </div>
             </a>
             <a href="#" class="card">
@@ -142,7 +142,7 @@
                 </div>
               </div>
               <div class="selected">
-                <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check fa-xl"></i>
               </div>
             </a>
             <a href="#" class="card">
@@ -154,7 +154,7 @@
                 </div>
               </div>
               <div class="selected">
-                <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check fa-xl"></i>
               </div>
             </a>
           </div>
